Change java version to 17